@@ -44,7 +44,7 @@ public class CharacterTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getString("column")).thenReturn("a");
-    assertEquals(new Character('a'), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Character.valueOf('a'), TYPE_HANDLER.getResult(rs, "column"));
     verify(rs, never()).wasNull();
   }
 
@@ -60,7 +60,7 @@ public class CharacterTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getString(1)).thenReturn("a");
-    assertEquals(new Character('a'), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Character.valueOf('a'), TYPE_HANDLER.getResult(rs, 1));
     verify(rs, never()).wasNull();
   }
 
@@ -76,7 +76,7 @@ public class CharacterTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getString(1)).thenReturn("a");
-    assertEquals(new Character('a'), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Character.valueOf('a'), TYPE_HANDLER.getResult(cs, 1));
     verify(cs, never()).wasNull();
   }
 
